zeit.cms changes
================

1.45.1 (unreleased)
-------------------

- Make sure indexing referencing object doesn't break when there is change in
  the list duinng iteration (#7635).
- Use gocept.selenium to run selenium tests (#7549).


1.45.0 (2010-07-07)
-------------------

- Fix test isolation problem (#7467).
- Removed assignment of UUIDs, this is handled by the DAV-Server now (#7366).
- Added trackeback info to publish/rectract tasks (#7443).
- Show UUID when there are duplication errors (#7247).
- Allow "checkin" for ghosts (#7152).
- Preview URLs are now determined using an adapter (#7030).
- Added a Nagios checkable view for the length of the publish task queue
  (#6801).
- Update relation index not only on checkin but also on add (#6415).
- Enable flashmessages to be updated via javascript (#6415).
- checkout.helper supports ignoring conflicts now (#7587).
- Avoid race-condition during publish: don't check if we can checkout/checkin,
  but try to checkout/checkin and catch errors. (#7586).


1.44.0 (2010-06-09)
-------------------

- Live-Propertys nur setzen, wenn sich der Wert geändert hat (#7392).
- CAP-Kontext wieder entfernt (#7365).
- Bilddatei ist beim Anlegen jetzt obligatorisch, beim Editieren nicht (#7253).
- Obskurer Clipboard/Ghost-Fehler behoben (#6631).
- Neues Tab 'References', in dem die Objekte aufgelistet werden, von denen ein
  Objekt referenziert wird (#6160).
- Fehler beim Feed-Update mit FakeEntry behoben (#7391).
- Sortieren einer Bildergruppe nach Dateiname repariert (#7087).
- Autoren sind nicht mehr Freitext, sondern CMS-Objekte (#7333).
- SingleResource erlaubt Löschen (#5010).


1.43.0 (2010-06-02)
-------------------

- Retrieving None from XML now yields None, not the unicode string u'None'
  (#7360).

- Copyrights-field from CommonMetadata is now optional

- Copyrights moved to "navigation" in metadata form.

- ``product_id`` moved to "head" in metadata form.


1.42.0 (2010-05-17)
-------------------
